# AppDownloader

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
scripts/: backup.ps1  create_admin.py  install_service.ps1
src/appdownloader/: __init__.py  auth.py  cli.py  config.py  db.py  main.py  models.py  ui.py  utils.py
src/appdownloader/routes/: admin.py  public.py
src/appdownloader/static/: style.css
src/appdownloader/templates/: admin_apps.html  admin_dashboard.html  admin_login.html  admin_notices.html  admin_upload.html  app_detail.html  base.html  index.html
tests/: conftest.py  test_app_flow.py
